# Selling-optionscom

./: .dockerignore  .env.nas  .gitignore  .replit  Caddyfile  DEPLOYMENT_GUIDE.md  Dockerfile  NAS-DEPLOYMENT-CHECKLIST.txt  app.py  calculator.html  calculator.js  conversation.md  cookies.txt  corrected_index.html  corrected_video_tutorials.html  db_dump.sql  debug_test.py  deploy-to-nas.sh  docker-compose.lab.yml  docker-compose.nas.yml  docker-compose.yml  index.html  init-db.sql  lab-deploy-fixed.sh  lab-deploy.sh  lab-replacement-guide.md  main.py  pyproject.toml  replit.md  requirements.txt  style.css  video-tutorials.html
Docs/: Database.md  Optimal Organization of files  POLYGON_EOD_DATA_ANALYSIS.md  SELLING-OPTIONS-ARCHITECTURE-DOCS.md  api.md  architecture.md  database_dump.md  replit.md
attached_assets/: BarChartData_1757010742411.accdb  Pasted--1-Stopped-sudo-yum-install-docker-y-ec2-user-ip-172-31_1767404151167.txt  Pasted--DOMAIN-selling-options-your-nas-domain-com-ec2-user-ip_1767405550467.txt  Pasted--Running-4-4-Network-selling-options-lab-lab-network-Created--1757043780010_1757043780011.txt  Pasted--ec2-user-ip-172-31-25-224-Selling-optionscom-docker-co_1767404964753.txt  Pasted--ec2-user-ip-172-31-25-224-Selling-optionscom-docker-co_1767408801872.txt  Pasted--ec2-user-ip-172-31-25-224-Selling-optionscom-docker-sy_1767404586371.txt  Pasted--ec2-user-ip-172-31-25-224-Selling-optionscom-git-check_1767407198066.txt  Pasted--ec2-user-ip-172-31-25-224-Selling-optionscom-git-pull-_1767405740621.txt  Prediction Math Specification_1757360815570.docx  (+26 more)
(+36 files in other folders)
