[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-session>=0.8.0",
    "flask>=3.1.2",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.5",
    "yfinance>=0.2.65",
    "bcrypt>=4.3.0",
]
